--- a/transaction/src/main/resources/templates/view/allocation/allocationView.html
+++ b/transaction/src/main/resources/templates/view/allocation/allocationView.html
@@ -7,15 +7,15 @@
     <link rel="stylesheet" type="text/css" th:href="@{/CSS/allocation/allocation.css}">        
     <link rel="stylesheet" type="text/css" th:href="@{/CSS/com/modal.css}">        
     <link rel="stylesheet" type="text/css" th:href="@{/CSS/com/com.css}">    
-    <script type="text/javascript" th:src="@{/JS/utlt/modal.js}"></script>    
-    <script type="text/javascript" th:src="@{/JS/utlt/com.js}"></script>  
-    <script type="text/javascript" th:src="@{/JS/allocation/allocation.js}"></script>  
+    <script type="text/javascript" th:src="@{/JS/utlt/modal.js}"    defer></script>    
+    <script type="text/javascript" th:src="@{/JS/utlt/com.js}"     defer></script>  
+    <script type="text/javascript" th:src="@{/JS/allocation/allocation.js}"     defer></script>  
     <!--차트-->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script th:inline="javascript">
       window.onload = function(){
-        const data = /*[[${aSelect}]]*/;
-        var parameter = /*[[${parameter}]]*/;
+         const data = /*[[${aSelect}]]*/;        
+         const parameter = /*[[${parameter}]]*/;
         //console.log(parameter.month);
         if(!isEmpty(data)) allocationBarChart(data,parameter.month);
       }
@@ -217,7 +217,7 @@
              <!--팝업 컨텐츠 영역-->
              <div class="popup_cont001">
                <header class="header002 h40">
-                 <h1 id="t_stockName" style="font-size: 10px;;"></h1>                    
+                 <h1 id="t_stockName" ></h1>                    
                  <span class="close001" onclick="fn_closePop()">&times;</span>
                </header>
                <main class="main001">
@@ -261,7 +261,8 @@
                                     <button type="button" onclick="document.getElementById('I_FILE').click();">
                                       파일 선택
                                     </button>
-                                    
+                                    <!-- 데이터 수정 시 사용-->
+                                    <input type="hidden" id="EXISTING_FILE" name="EXISTING_FILE" value="">
                                     <!-- 파일명 표시용 -->
                                     <span id="I_FILENAME_TEXT">선택된 파일 없음</span>
                               </td>
@@ -279,8 +280,8 @@
              <footer class="footer001">
              <!--팝업 버튼 영역-->
              <div class="popup_btn001" >
-                 <input id="btn_insert" type="button" class="update-button001" onclick="allocationInsert01();" value="저장"/>                
-                 <input id="btn_update" type="button"  class="update-button001" onclick="allocationUpdate01();" value="수정"/>
+                 <input id="btn_insert" type="button" class="update-button001" onclick="allocationInsert02();" value="저장"/>                
+                 <input id="btn_update" type="button"  class="update-button001" onclick="allocationUpdate02();" value="수정"/>
                  <input type="button" class="close-button001"  onclick="fn_closePop()" value="닫기"/>
              </div>
              </footer>
